--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ CMakeLists.txt.user*
 *.exe
 
 /venv/
+/dist/
+/tests/
+/src/BuzzQtExtension.egg-info/
+/BuzzQtExtension.pyproject
+/BuzzQtExtension.pyproject.user
